# unif-appsec

./: README.core.md  README.md  master_spec.md  pyproject.toml  scratch_test_m1.py  scratch_test_m2.py
apps/cli/: commands.py  main.py
core/: __init__.py
core/config/: __init__.py  defaults.py  loader.py  models.py
core/exports/: __init__.py  evidence_limits.py  json_writer.py  redaction.py  sarif_writer.py
core/findings/: __init__.py  fingerprints.py  models.py  normalize.py
core/logging/: __init__.py  setup.py
core/orchestration/: __init__.py  constants.py  exit_code.py  planner.py  results.py  runner.py
core/plugins/: __init__.py  base.py  builtin.py  registry.py
core/policy/: __init__.py  profiles.py  suppression.py
docs/: architecture.md  config_reference.md  findings_schema.md  implementation_plan.md  master_spec.md  module_contracts.md
examples/: sample_config.yaml  scan_output.example.json
modules/: __init__.py
modules/dast/: DESIGN.md  __init__.py  plugin.py
modules/iac/: __init__.py  plugin.py
modules/sast/: DESIGN_NOTE.md  __init__.py  plugin.py
modules/sca/: DESIGN_NOTE.md  advisories.py  discovery.py  findings_mapper.py  inventory.py  matcher.py  plugin.py
samples/: README.md  requirements.txt  run_all_samples.py
samples/combined/: README.md
samples/dast/: README.md
samples/iac/: README.md
samples/output/: LATEST_RUN.txt
schemas/: config.schema.json  finding.schema.json  scan_result.schema.json
tests/: conftest.py
unif_appsec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+181 files in other folders)
