[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unif-appsec"
version = "0.1.0"
description = "Unified AppSec Platform (core + pluggable modules)"
readme = "README.core.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "packaging>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
appsec = "apps.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "core*", "modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
